tests/src/frontend/syntax/invalid/duplicate_lambda_positional_params.sk
fun main(): void {
  print_raw(((p, p) ~> p)("Fail", "Failer"))
}
